拆分BaseTemplate更好的管理基础组件 修复Opendict无法正常使用的问题 修复EF无法正常使用的问题，将EF数据库上下文置于底层

--- a/Saki.InterfaceTemplate/Saki.InterfaceTemplate.csproj
+++ b/Saki.InterfaceTemplate/Saki.InterfaceTemplate.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Saki.AutoFac\Saki.AutoFac.csproj" />
     <ProjectReference Include="..\Saki.BaseTemplate\Saki.BaseTemplate.csproj" />
     <ProjectReference Include="..\Saki.ModelTemplate\Saki.ModelTemplate.csproj" />
   </ItemGroup>
