--- a/Saki.OpenIddictServer/appsettings.json
+++ b/Saki.OpenIddictServer/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=OpenIddict;User Id=sa;Password=lei005917.;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=.;Database=OpenIddict;User Id=sa;Password=lei005917.;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
