--- a/Saki.DynamicWebApi/Saki.DynamicWebApi.csproj
+++ b/Saki.DynamicWebApi/Saki.DynamicWebApi.csproj
@@ -7,11 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="BaseEntity\" />
+    <PackageReference Include="Panda.DynamicWebApi" Version="1.2.2" />
   </ItemGroup>
 
 </Project>
