--- a/Saki.MiniProfiler/Saki.MiniProfiler.csproj
+++ b/Saki.MiniProfiler/Saki.MiniProfiler.csproj
@@ -7,13 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="BaseEntity\**" />
-    <EmbeddedResource Remove="BaseEntity\**" />
-    <None Remove="BaseEntity\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.5.4" />
+    <PackageReference Include="MiniProfiler.EntityFrameworkCore" Version="4.5.4" />
   </ItemGroup>
 
 </Project>
