新增XUnit测试工具 新增阿波罗配置中心模块

--- a/Saki.TemplateWebProject.v2/appsettings.json
+++ b/Saki.TemplateWebProject.v2/appsettings.json
@@ -1,12 +1,18 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "server=.;database=Saki_MiniWork;uid=sa;pwd=lei005917.;TrustServerCertificate=true"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Apollo": {
+    "AppId": "Saki_DevDept1", // Apollo 注册的应用ID
+    "Env": "DEV", // 环境：DEV/FAT/UAT/PROD
+    "Cluster": "default", // 集群名称
+    "Namespaces": [ "application", "Saki_DevDept1.globalsetting" ], // 命名空间
+    "MetaServer": "http://localhost:8080",
+    "ConfigServer": [ "http://localhost:8080/" ]
+    //"Secret": "91c2ba925fce466485bb5a0cde41ac62" // 密钥（可选）
+  }
 }
