--- a/Saki.TemplateWebProject.v2/Saki.TemplateWebProject.v2.csproj
+++ b/Saki.TemplateWebProject.v2/Saki.TemplateWebProject.v2.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <!-- <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.6" /> -->
+    <PackageReference Include="Consul.AspNetCore" Version="1.7.14.7" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6">
@@ -42,6 +43,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Saki.ApolloConfigCenter\Saki.ApolloConfigCenter.csproj" />
     <ProjectReference Include="..\Saki.AutoFac\Saki.AutoFac.csproj" />
     <ProjectReference Include="..\Saki.BaseTemplate\Saki.BaseTemplate.csproj" />
     <ProjectReference Include="..\Saki.DomainTemplate\Saki.DomainTemplate.csproj" />
