--- a/Saki.ModelTemplate/Saki.ModelTemplate.csproj
+++ b/Saki.ModelTemplate/Saki.ModelTemplate.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="SqlSugarCore" Version="5.1.4.196" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Saki.BaseTemplate\Saki.BaseTemplate.csproj" />
+  </ItemGroup>
+
 </Project>
