修复通过网关调用Consul下已注册服务问题 1:不知道这样的主机：修改node名称为宿主机Ip地址 2:无法认证ssl证书：开发环境直接通过配置跳过证书

--- a/Saki.Gateway/Saki.Gateway.csproj
+++ b/Saki.Gateway/Saki.Gateway.csproj
@@ -16,4 +16,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Saki.ApolloConfigCenter\Saki.ApolloConfigCenter.csproj" />
+  </ItemGroup>
+
 </Project>
