--- a/Saki.Gateway/appsettings.json
+++ b/Saki.Gateway/appsettings.json
@@ -2,8 +2,19 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "Ocelot": "Trace", // 改为Trace级别获取详细信息
+      "Microsoft": "Warning",
       "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*",
+  "Apollo": {
+    "AppId": "Saki_DevDept1", // Apollo 注册的应用ID
+    "Env": "DEV", // 环境：DEV/FAT/UAT/PROD
+    "Cluster": "default", // 集群名称
+    "Namespaces": [ "Ocelot.SettingNew" ], // 命名空间
+    "MetaServer": "http://localhost:8080",
+    "ConfigServer": [ "http://localhost:8080/" ]
+    //"Secret": "91c2ba925fce466485bb5a0cde41ac62" // 密钥（可选）
+  }
 }
