--- a/Saki.TemplateWebProject.v3/Properties/launchSettings.json
+++ b/Saki.TemplateWebProject.v3/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7175;http://localhost:5265",
+      "applicationUrl": "https://*:7003;http://*:8003",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
