--- a/Saki.TemplateWebProject.v3/Saki.TemplateWebProject.v3.csproj
+++ b/Saki.TemplateWebProject.v3/Saki.TemplateWebProject.v3.csproj
@@ -6,4 +6,16 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Consul.AspNetCore" Version="1.7.14.7" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="9.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="9.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="9.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Saki.ApolloConfigCenter\Saki.ApolloConfigCenter.csproj" />
+    <ProjectReference Include="..\Saki.BaseTemplate\Saki.BaseTemplate.csproj" />
+  </ItemGroup>
+
 </Project>
