--- a/Saki.TemplateWebProject.v3/appsettings.json
+++ b/Saki.TemplateWebProject.v3/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Apollo": {
+    "AppId": "Saki_DevDept1", // Apollo 注册的应用ID
+    "Env": "DEV", // 环境：DEV/FAT/UAT/PROD
+    "Cluster": "default", // 集群名称
+    "Namespaces": [ "application", "Saki_DevDept1.globalsetting", "Web2Api" ], // 命名空间
+    "MetaServer": "http://localhost:8080",
+    "ConfigServer": [ "http://localhost:8080/" ]
+    //"Secret": "91c2ba925fce466485bb5a0cde41ac62" // 密钥（可选）
+  }
 }
