修复在使用SwaggerForOcelot时, 从网关swagger页调用API时，url错误问题 调整APIDemo中，心跳接口返回的描述

--- a/Saki.TemplateWebProject.v1/Saki.TemplateWebProject.v1.csproj
+++ b/Saki.TemplateWebProject.v1/Saki.TemplateWebProject.v1.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Saki.BaseTemplate\Saki.BaseTemplate.csproj" />
     <ProjectReference Include="..\Saki.DomainTemplate\Saki.DomainTemplate.csproj" />
+    <ProjectReference Include="..\Saki.DynamicWebApi\Saki.DynamicWebApi.csproj" />
     <ProjectReference Include="..\Saki.RepositoryTemplate\Saki.RepositoryTemplate.csproj" />
   </ItemGroup>
 
