--- a/Saki.Gateway/Saki.Gateway.csproj
+++ b/Saki.Gateway/Saki.Gateway.csproj
@@ -9,7 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="MMLib.SwaggerForOcelot" Version="9.0.0" />
-    <PackageReference Include="Ocelot" Version="24.0.0" />
+    <PackageReference Include="Ocelot" Version="24.0.1" />
+    <PackageReference Include="Ocelot.Provider.Consul" Version="24.0.0" />
   </ItemGroup>
 
   <ItemGroup>
